--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </header>
 
-        <main class="page">
+        <main id="page" class="page">
             <div class="page__greetings">
 
                 <div class="page__greetings--container -container">
@@ -81,10 +81,10 @@
                             <img src="images/project-1.png" class="items__item--image -ibg"></img>
 
                             <div class="items__item--description">
-                                <a href="#" class="item__description--content">
+                                <div class="item__description--content">
                                     <img src="images/eye.png" class="description__content--eye"></img>
                                     <div class="description__content--name-project">Búzon correo</div>
-                                </a>
+                                </div>
                             </div>
                         </div>
 
@@ -92,10 +92,10 @@
                             <img src="images/project-1.png" class="items__item--image -ibg"></img>
 
                             <div class="items__item--description">
-                                <a href="#" class="item__description--content">
+                                <div class="item__description--content">
                                     <img src="images/eye.png" class="description__content--eye"></img>
                                     <div class="description__content--name-project">Búzon correo</div>
-                                </a>
+                                </div>
                             </div>
                         </div>
 
@@ -103,10 +103,10 @@
                             <img src="images/project-1.png" class="items__item--image -ibg"></img>
 
                             <div class="items__item--description">
-                                <a href="#" class="item__description--content">
+                                <div class="item__description--content">
                                     <img src="images/eye.png" class="description__content--eye"></img>
                                     <div class="description__content--name-project">Búzon correo</div>
-                                </a>
+                                </div>
                             </div>
                         </div>
 
@@ -114,10 +114,10 @@
                             <img src="images/project-1.png" class="items__item--image -ibg"></img>
 
                             <div class="items__item--description">
-                                <a href="#" class="item__description--content">
+                                <div class="item__description--content">
                                     <img src="images/eye.png" class="description__content--eye"></img>
                                     <div class="description__content--name-project">Búzon correo</div>
-                                </a>
+                                </div>
                             </div>
                         </div>
 
@@ -125,10 +125,10 @@
                             <img src="images/project-1.png" class="items__item--image -ibg"></img>
 
                             <div class="items__item--description">
-                                <a href="" class="item__description--content">
+                                <div class="item__description--content">
                                     <img src="images/eye.png" class="description__content--eye"></img>
                                     <div class="description__content--name-project">Búzon correo</div>
-                                </a>
+                                </div>
                             </div>
                         </div>
 
@@ -136,10 +136,10 @@
                             <img src="images/project-1.png" class="items__item--image -ibg"></img>
 
                             <div class="items__item--description">
-                                <a href="" class="item__description--content">
+                                <div class="item__description--content">
                                     <img src="images/eye.png" class="description__content--eye"></img>
                                     <div class="description__content--name-project">Búzon correo</div>
-                                </a>
+                                </div>
                             </div>
                         </div>
 
@@ -266,19 +266,19 @@
 
         </footer>
 
-        <div class="page__popup">
+        <div id="page-popup" class="page__popup">
             <div class="page__popup--container -container">
                 <div class="page__popup--content popup__content">
                     
-                    <img src="images/example-image.png" alt="image-project" class="popup__content--image -ibg"></img>
+                    <img id="project-image" src="images/example-image.png" alt="image-project" class="popup__content--image -ibg"></img>
                     <div class="popup__content--text content__text">
 
                         <div class="content__text--title text__title">
-                            <div class="text__title--text">Titulo proyecto</div>
+                            <div id="project-title" class="text__title--text">Titulo proyecto</div>
                         </div>
 
                         <div class="text__title--description title__description">
-                            <div class="title__description--text">Descripcion proyecto...</div>
+                            <div id="project-description" class="title__description--text">Descripcion proyecto...</div>
                         </div>
 
                     </div>
@@ -295,9 +295,9 @@
                         </a>
 
                     </div>
-                    <a href="#" class="exit__button">
+                    <div class="exit__button">
                         <img id="exit-button" src="images/button-exit.svg" alt="exit-button"></img>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
