--- a/index.html
+++ b/index.html
@@ -139,6 +139,42 @@
 
                         <div class="skills__items--item items__item">
                             <div class="items__item--content">
+                                <img src="images/html.svg" alt="html-icon" class="item__content--image">
+                                <div class="item__content--name-skill">HTML 5</div>
+                            </div>
+                        </div>
+
+                        <div class="skills__items--item items__item">
+                            <div class="items__item--content">
+                                <img src="images/javascript.svg" alt="html-icon" class="item__content--image">
+                                <div class="item__content--name-skill">JavaScript</div>
+                            </div>
+                        </div>
+
+                        <div class="skills__items--item items__item">
+                            <div class="items__item--content">
+                                <img src="images/figma.svg" alt="html-icon" class="item__content--image">
+                                <div class="item__content--name-skill">Figma</div>
+                            </div>
+                        </div>
+
+                        <div class="skills__items--item items__item">
+                            <div class="items__item--content">
+                                <img src="images/css.svg" alt="html-icon" class="item__content--image">
+                                <div class="item__content--name-skill">CSS 3</div>
+                            </div>
+                        </div>
+
+
+                        <div class="skills__items--item items__item">
+                            <div class="items__item--content">
+                                <img src="images/html.svg" alt="html-icon" class="item__content--image">
+                                <div class="item__content--name-skill">HTML 5 <span>&#60;Canvas&#62;</span></Canvas></div>
+                            </div>
+                        </div>
+<!--
+                        <div class="skills__items--item items__item">
+                            <div class="items__item--content">
                                 <img src="images/html.svg" alt="htnl-icon" class="item__content--image">
                                 <div class="item__content--name-skill">HTML 5</div>
                             </div>
@@ -172,43 +208,7 @@
                                 <div class="item__content--name-skill">JavaScript</div>
                             </div>
                         </div>
-
-                        <div class="skills__items--item items__item">
-                            <div class="items__item--content">
-                                <img src="images/html.svg" alt="htnl-icon" class="item__content--image">
-                                <div class="item__content--name-skill">HTML 5</div>
-                            </div>
-                        </div>
-
-                        <div class="skills__items--item items__item">
-                            <div class="items__item--content">
-                                <img src="images/javascript.svg" alt="htnl-icon" class="item__content--image">
-                                <div class="item__content--name-skill">JavaScript</div>
-                            </div>
-                        </div>
-
-                        <div class="skills__items--item items__item">
-                            <div class="items__item--content">
-                                <img src="images/figma.svg" alt="htnl-icon" class="item__content--image">
-                                <div class="item__content--name-skill">Figma</div>
-                            </div>
-                        </div>
-
-                        <div class="skills__items--item items__item">
-                            <div class="items__item--content">
-                                <img src="images/css.svg" alt="htnl-icon" class="item__content--image">
-                                <div class="item__content--name-skill">CSS 3</div>
-                            </div>
-                        </div>
-
-
-                        <div class="skills__items--item items__item">
-                            <div class="items__item--content">
-                                <img src="images/javascript.svg" alt="htnl-icon" class="item__content--image">
-                                <div class="item__content--name-skill">JavaScript</div>
-                            </div>
-                        </div>
-
+-->
 
                     </div>
                 </div>
