--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
     </div>
 
 
-    <script type="module" src="js/script.js"></script>
+    <script src="js/script.js"></script>
+
 </body>
 </html>
