--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <div id="page-popup" class="page__popup">
                 <div class="page__popup--container -container">
-                    <div class="page__popup--content popup__content">
+                    <div id="page-popup--content" class="page__popup--content popup__content">
                         
                         <img id="project-image" src="images/example-image.png" alt="image-project" class="popup__content--image -ibg"></img>
                         <div class="popup__content--text content__text">
@@ -290,8 +290,8 @@
                             </a>
 
                         </div>
-                        <div class="exit__button">
-                            <img id="exit-button" src="images/button-exit-default.svg" alt="exit-button"></img>
+                        <div id="exit-button--mini" class="exit__button">
+                            <img id="exit-button--default" src="images/button-exit-default.svg" alt="exit-button"></img>
                         </div>
                     </div>
                 </div>
