added ' target="_blank" '

--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
                         </div>
                         <div class="popup__content--buttons content__buttons">
 
-                            <a id="git-link" href="#" class="content__buttons--button button__repository">
+                            <a target="_blank" id="git-link" href="#" class="content__buttons--button button__repository">
                                 <img src="images/GitHub.svg" class="button__repository--image"></img>
                                 <div class="button__repository--text">Repository</div>
                             </a>
 
-                            <a id="demo-link" href="#" class="content__buttons--button button__demo">
+                            <a target="_blank" id="demo-link" href="#" class="content__buttons--button button__demo">
                                 <img src="images/www.svg" class="button__demo--image"></img>
                                 <div class="button__demo--text">Demo</div>
                             </a>
